--- a/src/_example/index.html
+++ b/src/_example/index.html
@@ -16,9 +16,9 @@
     <div class="p-6 m-3 p-medium">
       
       <div class="flex p-2 justify-between">
-        <button class="raised-btn">test</button>
-        <button class="raised-btn">test</button>
-        <button class="raised-btn">test</button>
+        <button class="raised-btn">Rintu</button>
+        <button class="raised-btn">Cancel</button>
+        <button class="raised-btn">new</button>
 
       </div>
 <!-- ---------------------------- -->
