working on buttons

--- a/src/_example/index.html
+++ b/src/_example/index.html
@@ -16,9 +16,14 @@
     <div class="p-6 m-3 p-medium">
       
       <div class="flex p-2 justify-between">
-        <button class="raised-btn">Rintu</button>
-        <button class="raised-btn">Cancel</button>
-        <button class="raised-btn">new</button>
+        <button class="raised-btn color-success" >raised-btn</button>
+        <button class="filled-btn color-success" >filled-btn</button>
+        <button class="filled-tonal-btn">filled-tonal-btn</button>
+        <button class="outlined-btn ">Cancel</button>
+        <button class="text-btn">new</button>
+        <button class="icon-btn">new</button>
+        <button class="fab-btn">new</button>
+        <button class="extended-fab-btn">new</button>
 
       </div>
 <!-- ---------------------------- -->
