button dark mode configured

--- a/src/_example/index.html
+++ b/src/_example/index.html
@@ -16,7 +16,7 @@
     <div class="p-6 m-3 p-medium">
       
       <div class="flex p-2 justify-between">
-        <button class="raised-btn  color-blue-light" >raised-btn</button>
+        <button class="raised-btn  color-blue-light dark:color-blue-dark" >raised-btn</button>
         <button class="filled-btn color-success" >filled-btn</button>
         <button class="filled-tonal-btn">filled-tonal-btn</button>
         <button class="outlined-btn ">Cancel</button>
