filled and filled toned button finised

--- a/src/_example/index.html
+++ b/src/_example/index.html
@@ -17,9 +17,10 @@
       
       <div class="flex p-2 justify-between">
         <button class="raised-btn  color-blue-light dark:color-blue-dark" >raised-btn</button>
-        <button class="filled-btn color-success" >filled-btn</button>
+        <button class="filled-btn " >filled-btn</button>
+        <button class="filled-btn " disabled >disabled filled-btn</button>
         <button class="filled-tonal-btn">filled-tonal-btn</button>
-        <button class="outlined-btn ">Cancel</button>
+        <button class="outlined-btn ">outlined-btn</button>
         <button class="text-btn">new</button>
         <button class="icon-btn">new</button>
         <button class="fab-btn">new</button>
