dev- working on btn css

--- a/src/_example/index.html
+++ b/src/_example/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./../../dist/output.css" />
-
+    <link rel="stylesheet" href="../../dist/output.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
   
   </head>
@@ -21,8 +21,19 @@
         <button class="filled-btn " disabled >disabled filled-btn</button>
         <button class="filled-tonal-btn">filled-tonal-btn</button>
         <button class="outlined-btn ">outlined-btn</button>
+
+        <button class="outlined-btn with-icon">
+          <i class="fa fa-times" aria-hidden="true"></i>
+
+          outlined-withicon-btn</button>
+
         <button class="text-btn">new</button>
-        <button class="icon-btn">new</button>
+        <button class="icon-btn">
+          <i class="fa fa-times" aria-hidden="true"></i>
+
+
+
+        </button>
         <button class="fab-btn">new</button>
         <button class="extended-fab-btn">new</button>
 
