button and shadow fix

--- a/src/_example/index.html
+++ b/src/_example/index.html
@@ -13,10 +13,10 @@
   <body>
 
     <!-- button -->
-    <div class="p-6 m-3 p-medium">
+    <div class="p-6 m-3 p-medium bg-on-secondary-container-light">
       
       <div class="flex p-2 justify-between">
-        <button class="raised-btn  color-blue-light dark:color-blue-dark" >raised-btn</button>
+        <button class="raised-btn " >raised-btn</button>
         <button class="filled-btn " >filled-btn</button>
         <button class="filled-btn " disabled >disabled filled-btn</button>
         <button class="filled-tonal-btn">filled-tonal-btn</button>
@@ -34,10 +34,11 @@
 
 
         </button>
-        <button class="fab-btn">new</button>
         <button class="extended-fab-btn">new</button>
 
       </div>
+      <button class="fab-btn">new</button>
+
 <!-- ---------------------------- -->
 <!-- card -->
       <div class="card mx-8 mt-3 text-c p-3">
