--- a/src/_example/index.html
+++ b/src/_example/index.html
@@ -191,7 +191,7 @@
           </a>
           <a
             class="flex items-center flex-shrink-0 h-10 px-3 mt-auto text-sm font-medium bg-gray-200 rounded hover:bg-gray-300"
-            href="#"
+           
           >
             <svg
               class="w-5 h-5"
@@ -216,6 +216,16 @@
         </div>
         <div class="flex-grow p-6 overflow-auto bg-gray-200">
             <!-- here -->
+
+            <div class="card-outlined m-2 bg-pri " >
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi iste dignissimos perspiciatis pariatur quas rerum quia, ipsam blanditiis laboriosam reprehenderit perferendis nulla, iusto consequuntur natus incidunt ipsum nemo, quo ab.
+            </div>
+            <div class="card-elevated m-2">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi iste dignissimos perspiciatis pariatur quas rerum quia, ipsam blanditiis laboriosam reprehenderit perferendis nulla, iusto consequuntur natus incidunt ipsum nemo, quo ab.
+            </div>
+            <div class="card-filled m-2">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi iste dignissimos perspiciatis pariatur quas rerum quia, ipsam blanditiis laboriosam reprehenderit perferendis nulla, iusto consequuntur natus incidunt ipsum nemo, quo ab.
+            </div>
         </div>
       </div>
       <!-- Component End  -->
